--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,62 @@ h1{
 	background: #2cbab5;
 	box-shadow: 1px 1px 10px rgba(0,0,0,0.25);
 }
+
+.grid-repeat{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(4, auto);
+	grid-gap: 10px;
+	background: #2cbab5;
+	padding: 10px;
+	border: 10px solid #393e4d;
+	width: 90%;
+	max-width: 1000px;
+	margin: auto;
+	font-size: 40px;
+	line-height: 40px;
+	text-align: center;
+}
+.grid{
+            
+            display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows:  repeat (4, auto);
+
+        grid-template-areas: "header header header "
+                             "sidebar1 contenido  sidebar2"
+                             "sidebar1 widget  sidebar2"
+                             "footer footer  footer";
+    }
+
+    .grid .header{
+        background: orange;
+        grid-column-start: header;
+        grid-column-end: header;
+    }
+
+    .grid .sidebar1{
+        background: lightblue;
+        grid-column: sidebar1;
+        grid-row: sidebar1;
+    }
+    .grid .contenido{
+        background: lightgreen;
+        color: black;
+        grid-area: contenido;
+    }
+    .grid .widget{
+        background: lightcoral;
+        grid-area: widget;
+       
+    }
+
+    .grid .sidebar2{
+        background: lightyellow;
+        grid-area: sidebar2;
+        color:black
+    }
+    .grid .footer{
+        background: lightgray;
+        grid-area: footer;
+    }
